--- a/app/views/templates/mystyle.css
+++ b/app/views/templates/mystyle.css
@@ -1,3 +1,7 @@
+p {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
+}
+
 .nav-link{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
     font-weight: 500;
@@ -68,4 +72,19 @@ h2 {
     background-color: #1abc9c;
 }
 
+.my-sidebar-option {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-left: 4rem;
+    padding-block: 1rem;
+    font-size: 16px;
+    color:#C5C5C5;
+    text-decoration: none;
+}
+.my-sidebar-option:hover {
+    color: black;
+    background: linear-gradient(270deg, rgba(69, 241, 8, 0.32) 2%, rgba(255, 255, 255, 0) 100%);
+} 
 
+.my-input {
+    background-color: #F3F3F3;
+}
